Implement and connect FirstPersonTemplate in main game.

--- a/Assets/Scripts/BML.Scripts.asmdef
+++ b/Assets/Scripts/BML.Scripts.asmdef
@@ -7,7 +7,8 @@
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:a20a7ad1c08747d4bb3be8438e11e91b",
         "GUID:f9d0af403d2f2be4699573cc5d56509b",
-        "GUID:4a1cb1490dc4df8409b2580d6b44e75e"
+        "GUID:4a1cb1490dc4df8409b2580d6b44e75e",
+        "GUID:0c6958d34bfa43539ec1a17ce3b72847"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
