--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.harumak.upalette": "2.1.1",
     "com.thisotherthing.uishapeskit": "1.0.5",
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.burst": "1.6.6",
     "com.unity.cinemachine": "2.6.11",
     "com.unity.collab-proxy": "1.15.16",
     "com.unity.editorcoroutines": "1.0.0",
@@ -10,6 +11,7 @@
     "com.unity.ide.visualstudio": "2.0.14",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.3.0",
+    "com.unity.mathematics": "1.2.6",
     "com.unity.postprocessing": "3.2.1",
     "com.unity.probuilder": "4.5.2",
     "com.unity.progrids": "3.0.3-preview.6",
