Add spray and vacuum interactions and damage receivers.

--- a/Assets/BML/FirstPersonTemplate/Scripts/BML.FirstPersonTemplate.asmdef
+++ b/Assets/BML/FirstPersonTemplate/Scripts/BML.FirstPersonTemplate.asmdef
@@ -10,7 +10,8 @@
         "GUID:0c8bb1426b6075745a0c030981d16730",
         "GUID:c6c3679c49b7ab64da16d6a3bda457fa",
         "GUID:0c6958d34bfa43539ec1a17ce3b72847",
-        "GUID:8087d854c1f812e4b9a74437dfc524e0"
+        "GUID:8087d854c1f812e4b9a74437dfc524e0",
+        "GUID:b9d61b92870877a459c95c25c7d15074"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
