--- a/Assets/Scripts/BML.Scripts.asmdef
+++ b/Assets/Scripts/BML.Scripts.asmdef
@@ -8,7 +8,9 @@
         "GUID:a20a7ad1c08747d4bb3be8438e11e91b",
         "GUID:f9d0af403d2f2be4699573cc5d56509b",
         "GUID:4a1cb1490dc4df8409b2580d6b44e75e",
-        "GUID:0c6958d34bfa43539ec1a17ce3b72847"
+        "GUID:0c6958d34bfa43539ec1a17ce3b72847",
+        "GUID:67612bc87c7029942a0614d17ee26f34",
+        "GUID:3a13ec30e32a1f44588df5165b594fd8"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
