--- a/Assets/Scripts/BML.Scripts.asmdef
+++ b/Assets/Scripts/BML.Scripts.asmdef
@@ -11,7 +11,8 @@
         "GUID:0c6958d34bfa43539ec1a17ce3b72847",
         "GUID:67612bc87c7029942a0614d17ee26f34",
         "GUID:3a13ec30e32a1f44588df5165b594fd8",
-        "GUID:0c8bb1426b6075745a0c030981d16730"
+        "GUID:0c8bb1426b6075745a0c030981d16730",
+        "GUID:8087d854c1f812e4b9a74437dfc524e0"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
